<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/boyutSecin"
        android:textColor="@color/anaRenk"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/anaRenk"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alfa_slab_one"
        android:gravity="center"
        android:text="PUMA"
        android:textAlignment="center"
        android:textColor="@color/yaziRenk1"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/tanim"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="394dp"
        android:layout_height="93dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:text="@string/aciklama"
        android:textAlignment="textStart"
        android:textColor="@color/anaRenk"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/pumaKosuAyakkabisi"
        android:textColor="@color/anaRenk"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/fiyat"
        android:textColor="@color/anaRenk"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/button2"
        android:layout_width="144dp"
        android:layout_height="59dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/anaRenk"
        android:text="@string/cikisYapmak"
        android:textColor="@color/yaziRenk1"
        android:textSize="16sp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/white" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="272dp"
        android:layout_height="168dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/puma3_1" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip17"
        android:layout_width="64dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/numara_45"
        android:textAlignment="center"
        android:textColor="@color/yaziRenk1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:chipBackgroundColor="@color/yaziRenk2"
        app:chipStrokeColor="@color/yaziRenk2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/chip16"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip14"
        android:layout_width="64dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:text="@string/numara_42"
        android:textAlignment="center"
        android:textColor="@color/yaziRenk1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:chipBackgroundColor="@color/yaziRenk2"
        app:chipStrokeColor="@color/yaziRenk2"
        app:layout_constraintEnd_toStartOf="@+id/chip15"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/chip5"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip16"
        android:layout_width="64dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:text="@string/numara_44"
        android:textAlignment="center"
        android:textColor="@color/yaziRenk1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:chipBackgroundColor="@color/yaziRenk2"
        app:chipStrokeColor="@color/yaziRenk2"
        app:layout_constraintEnd_toStartOf="@+id/chip17"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/chip15"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip15"
        android:layout_width="64dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:text="@string/numara_43"
        android:textAlignment="center"
        android:textColor="@color/yaziRenk1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:chipBackgroundColor="@color/yaziRenk2"
        app:chipStrokeColor="@color/yaziRenk2"
        app:layout_constraintEnd_toStartOf="@+id/chip16"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/chip14"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip5"
        android:layout_width="64dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/numara_41"
        android:textAlignment="center"
        android:textColor="@color/yaziRenk1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:chipBackgroundColor="@color/yaziRenk2"
        app:chipStrokeColor="@color/yaziRenk2"
        app:layout_constraintEnd_toStartOf="@+id/chip14"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/flame" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/left" />

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/shopping" />


</androidx.constraintlayout.widget.ConstraintLayout>